Revert "[STCOR-752]: Ensure <AppIcon> is not cut off (#1355)"
This reverts commit a17be4c7f7312354d6914202a967e64e0d813d08.

--- a/src/components/AppIcon/AppIcon.css
+++ b/src/components/AppIcon/AppIcon.css
@@ -72,21 +72,18 @@
 /**
  * Sizes
  */
-.appIcon.large,
 .large .icon {
   height: 48px;
   min-width: 48px;
   width: 48px;
 }
 
-.appIcon.medium,
 .medium .icon {
   width: 24px;
   min-width: 24px;
   height: 24px;
 }
 
-.appIcon.small,
 .small .icon {
   width: 14px;
   min-width: 14px;
